--- a/index.html
+++ b/index.html
@@ -1,88 +1,88 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>AirLines</title>
-<meta charset="utf-8">
-<link rel="stylesheet" href="css/reset.css" type="text/css" media="all">
-<link rel="stylesheet" href="css/layout.css" type="text/css" media="all">
-<link rel="stylesheet" href="css/style.css" type="text/css" media="all">
-<script type="text/javascript" src="js/jquery-1.5.2.js" ></script>
-<script type="text/javascript" src="js/cufon-yui.js"></script>
-<script type="text/javascript" src="js/cufon-replace.js"></script>
-<script type="text/javascript" src="js/Cabin_400.font.js"></script>
-<script type="text/javascript" src="js/tabs.js"></script>
-<script type="text/javascript" src="js/jquery.jqtransform.js" ></script>
-<script type="text/javascript" src="js/jquery.nivo.slider.pack.js"></script>
-<script type="text/javascript" src="js/atooltip.jquery.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
-<!--[if lt IE 9]>
-<script type="text/javascript" src="js/html5.js"></script>
-<style type="text/css">.main, .tabs ul.nav a, .content, .button1, .box1, .top { behavior:url("../js/PIE.htc")}</style>
-<![endif]-->
-</head>
-<body id="page1">
-<div class="main">
-  <!--header -->
-  <header>
-    <div class="wrapper">
-      <h1><a href="index.html" id="logo">AirLines</a></h1>
-      <span id="slogan">Fast, Frequent &amp; Safe Flights</span>
-      <nav id="top_nav">
-        <ul>
-          <li><a href="index.html" class="nav1">Home</a></li>
-          <li><a href="#" class="nav2">Sitemap</a></li>
-          <li><a href="contacts.html" class="nav3">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-    <nav>
-      <ul id="menu">
-        <li id="menu_active"><a href="index.html"><span><span>About</span></span></a></li>
-        <li><a href="offers.html"><span><span>Offers</span></span></a></li>
-        <li><a href="book.html"><span><span>Book</span></span></a></li>
-        <li><a href="services.html"><span><span>Services</span></span></a></li>
-        <li><a href="safety.html"><span><span>Safety</span></span></a></li>
-        <li class="end"><a href="contacts.html"><span><span>Contacts</span></span></a></li>
-      </ul>
-    </nav>
-  </header>
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+<title>AirLines</title>  
+<meta charset="utf-8"> 
+<link rel="stylesheet" href="css/reset.css" type="text/css" media="all">  
+<link rel="stylesheet" href="css/layout.css" type="text/css" media="all"> 
+<link rel="stylesheet" href="css/style.css" type="text/css" media="all"> 
+<script type="text/javascript" src="js/jquery-1.5.2.js" ></script>  
+<script type="text/javascript" src="js/cufon-yui.js"></script> 
+<script type="text/javascript" src="js/cufon-replace.js"></script> 
+<script type="text/javascript" src="js/Cabin_400.font.js"></script> 
+<script type="text/javascript" src="js/tabs.js"></script>  
+<script type="text/javascript" src="js/jquery.jqtransform.js" ></script> 
+<script type="text/javascript" src="js/jquery.nivo.slider.pack.js"></script>  
+<script type="text/javascript" src="js/atooltip.jquery.js"></script> 
+<script type="text/javascript" src="js/script.js"></script> 
+<!--[if lt IE 9]>  
+<script type="text/javascript" src="js/html5.js"></script> 
+<style type="text/css">.main, .tabs ul.nav a, .content, .button1, .box1, .top { behavior:url("../js/PIE.htc")}</style> 
+<![endif]-->  
+</head>  
+<body id="page1">  
+<div class="main"> 
+  <!--header --> 
+  <header>  
+    <div class="wrapper"> 
+      <h1><a href="index.html" id="logo">AirLines</a></h1> 
+      <span id="slogan">Fast, Frequent &amp; Safe Flights</span> 
+      <nav id="top_nav"> 
+        <ul> 
+          <li><a href="index.html" class="nav1">Home</a></li> 
+          <li><a href="#" class="nav2">Sitemap</a></li> 
+          <li><a href="contacts.html" class="nav3">Contact</a></li> 
+        </ul> 
+      </nav> 
+    </div> 
+    <nav> 
+      <ul id="menu"> 
+         <li id="menu_active"><a href="index.html"><span><span>About</span></span></a></li>
+         <li><a href="offers.html"><span><span>Offers</span></span></a></li>
+         <li><a href="book.html"><span><span>Book</span></span></a></li>
+         <li><a href="services.html"><span><span>Services</span></span></a></li>
+         <li><a href="safety.html"><span><span>Safety</span></span></a></li>
+ <li class="end"><a href="contacts.html"><span><span>Contacts</span></span></a></li>
+      </ul> 
+    </nav> 
+  </header> 
   <!-- / header -->
-  <!--content -->
-  <section id="content">
-    <div class="for_banners">
-      <article class="col1">
-        <div class="tabs">
-          <ul class="nav">
-            <li class="selected"><a href="#Flight">Flight</a></li>
-            <li><a href="#Hotel">Hotel</a></li>
-            <li class="end"><a href="#Rental">Rental</a></li>
-          </ul>
-          <div class="content">
-            <div class="tab-content" id="Flight">
-              <form id="form_1" action="#" method="post">
-                <div>
-                  <div class="radio">
-                    <div class="wrapper">
-                      <input type="radio" name="name1" checked>
-                      <span class="left">Standard</span>
-                      <input type="radio" name="name1">
-                      <span class="left">World Map</span> </div>
-                  </div>
-                  <div class="row"> <span class="left">From</span>
-                    <input type="text" class="input">
-                  </div>
-                  <div class="row"> <span class="left">To</span>
-                    <input type="text" class="input">
-                  </div>
-                  <div class="wrapper">
-                    <div class="col1">
-                      <div class="row"> <span class="left">Outbound</span>
-                        <input type="text" class="input1" value="01.01.2023"  onblur="if(this.value=='') this.value='01.01.2023'" onFocus="if(this.value =='01.01.2023' ) this.value=''">
-                      </div>
-                      <div class="row"> <span class="left">Return</span>
-                        <input type="text" class="input1" value="01.01.2023"  onblur="if(this.value=='') this.value='01.01.2023'" onFocus="if(this.value =='01.01.2023' ) this.value=''">
-                      </div>
-                    </div>
+  <!--content -->   
+   <section id="content"> 
+     <div class="for_banners">
+       <article class="col1">
+         <div class="tabs">
+           <ul class="nav">
+             <li class="selected"><a href="#Flight">Flight</a></li>
+             <li><a href="#Hotel">Hotel</a></li>
+             <li class="end"><a href="#Rental">Rental</a></li>
+           </ul>
+           <div class="content">
+             <div class="tab-content" id="Flight">
+               <form id="form_1" action="#" method="post">
+                 <div>
+                   <div class="radio">
+                     <div class="wrapper">
+                       <input type="radio" name="name1" checked>
+                       <span class="left">Standard</span>
+                       <input type="radio" name="name1">
+                       <span class="left">World Map</span> </div>
+                   </div>
+                   <div class="row"> <span class="left">From</span>
+                     <input type="text" class="input">
+                   </div>
+                   <div class="row"> <span class="left">To</span>
+                     <input type="text" class="input">
+                   </div>
+                   <div class="wrapper">
+                     <div class="col1">
+                       <div class="row"> <span class="left">Outbound</span>
+                         <input type="text" class="input1" value="01.01.2023"  onblur="if(this.value=='') this.value='01.01.2023'" onFocus="if(this.value =='01.01.2023' ) this.value=''">
+                       </div>
+                       <div class="row"> <span class="left">Return</span>
+                         <input type="text" class="input1" value="01.01.2023"  onblur="if(this.value=='') this.value='01.01.2023'" onFocus="if(this.value =='01.01.2023' ) this.value=''">
+                       </div>
+                     </div>
                     <input type="text" class="input1 marg_top1" value="+/- 0 Days"  onblur="if(this.value=='') this.value='+/- 0 Days'" onFocus="if(this.value =='+/- 0 Days' ) this.value=''">
                   </div>
                   <div class="row"> <span class="left">Adults</span>
@@ -210,24 +210,24 @@
             <p class="pad_bot1"><strong>I fly because it releases my mind from the tyranny of petty things.</strong></p>
             <p>The scientific theory I like best is that the rings of Saturn are composed entirely of lost airline luggage.Sometimes, flying feels too God-like to be attained by man. Sometimes, the world from above seems too beautiful, too wonderful, too distant for human eyes to see.</p>
           </article>
-        </div>
+        </div> 
         <a href="#" class="button1"><strong>Read More</strong></a> </article>
-    </div>
+    </div> 
   </section>
   <!--content end-->
   <!--footer -->
   <footer>
     <div class="wrapper">
-      <ul id="icons">
-        <li><a href="#" class="normaltip"><img src="images/icon1.jpg" alt=""></a></li>
-        <li><a href="#" class="normaltip"><img src="images/icon2.jpg" alt=""></a></li>
-        <li><a href="#" class="normaltip"><img src="images/icon3.jpg" alt=""></a></li>
-        <li><a href="#" class="normaltip"><img src="images/icon4.jpg" alt=""></a></li>
-        <li><a href="#" class="normaltip"><img src="images/icon5.jpg" alt=""></a></li>
-        <li><a href="#" class="normaltip"><img src="images/icon6.jpg" alt=""></a></li>
+      <ul id="icons"> 
+        <li><a href="#" class="normaltip"><img src="images/icon1.jpg" alt=""></a></li> 
+        <li><a href="#" class="normaltip"><img src="images/icon2.jpg" alt=""></a></li> 
+        <li><a href="#" class="normaltip"><img src="images/icon3.jpg" alt=""></a></li>  
+        <li><a href="#" class="normaltip"><img src="images/icon4.jpg" alt=""></a></li> 
+        <li><a href="#" class="normaltip"><img src="images/icon5.jpg" alt=""></a></li> 
+        <li><a href="#" class="normaltip"><img src="images/icon6.jpg" alt=""></a></li>  
       </ul>
       <div class="links">Copyright &copy; <a href="#">Domain Name</a> All Rights Reserved<br>
-         Designed by <a target="_blank" href="">Faisal Khan.</a></div>
+         Designed by <a target="_blank" href="">Nipun Mudgal</a></div>
     </div>
   </footer>
   <!--footer end-->
@@ -237,7 +237,7 @@
 $(document).ready(function () {
     tabs.init();
 });
-jQuery(document).ready(function ($) {
+jQuery(document).ready(function ($) {                  //
     $('#form_1, #form_2, #form_3').jqTransform({
         imgPath: 'jqtransformplugin/img/'
     });
