--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <li><a href="#" class="normaltip"><img src="images/icon6.jpg" alt=""></a></li>  
       </ul>
       <div class="links">Copyright &copy; <a href="#">Domain Name</a> All Rights Reserved<br>
-         Designed by <a target="_blank" href="">Nipun Mudgal</a></div>
+         Designed by <a target="_blank" href="">NHPY Airlines</a></div>
     </div>
   </footer>
   <!--footer end-->
